# miRScope

./: .dockerignore  .gitignore  Dockerfile  README.md  environment.yml  mirscope.py  mirscope_analises.py  mirscope_core.py  pixi.toml  pyproject.toml  requirements.txt  run_modo_estrito.py  run_modo_macro.py
data/: mirna_Acacia_mangium.fasta  mirna_Aedes_aegypti.fasta  mirna_Alligator_mississippiensis.fasta  mirna_Amphimedon_queenslandica.fasta  mirna_Arabidopsis_lyrata.fasta  mirna_Ascaris_suum.fasta  mirna_Asparagus_officinalis.fasta  mirna_Ateles_geoffroyi.fasta  mirna_Avicennia_marina.fasta  mirna_Bombyx_mori.fasta  mirna_Bos_taurus.fasta  mirna_Bruguiera_cylindrica.fasta  mirna_Caenorhabditis_elegans.fasta  mirna_Caenorhabditis_remanei.fasta  mirna_Camelina_sativa.fasta  mirna_Carica_papaya.fasta  mirna_Cavia_porcellus.fasta  mirna_Citrus_clementina.fasta  mirna_Citrus_trifoliata.fasta  mirna_Cyprinus_carpio.fasta  mirna_Daubentonia_madagascariensis.fasta  mirna_Drosophila_grimshawi.fasta  mirna_Equus_caballus.fasta  mirna_Eugenia_uniflora.fasta  mirna_Glycine_soja.fasta  mirna_Gorilla_gorilla.fasta  mirna_Gossypium_hirsutum.fasta  mirna_Gossypium_raimondii.fasta  mirna_Haliotis_rufescens.fasta  mirna_Helianthus_annuus.fasta  mirna_Heligmosomoides_polygyrus.fasta  mirna_Herpesvirus_saimiri.fasta  mirna_Hippoglossus_hippoglossus.fasta  mirna_Human_herpesvirus.fasta  mirna_Hydra_magnipapillata.fasta  mirna_Ixodes_scapularis.fasta  mirna_Lagothrix_lagotricha.fasta  mirna_Lemur_catta.fasta  mirna_Lottia_gigantea.fasta  mirna_Lytechinus_variegatus.fasta  (+19 more)
fasta_especies/: mirna_Acyrthosiphon_pisum.fasta  mirna_Aegilops_tauschii.fasta  mirna_Amborella_trichopoda.fasta  mirna_Anas_platyrhynchos.fasta  mirna_Anopheles_gambiae.fasta  mirna_Aquilegia_caerulea.fasta  mirna_Arabidopsis_thaliana.fasta  mirna_Arachis_hypogaea.fasta  mirna_Artibeus_jamaicensis.fasta  mirna_Astatotilapia_burtoni.fasta  mirna_Bactrocera_dorsalis.fasta  mirna_Bandicoot_papillomatosis.fasta  mirna_Biston_betularia.fasta  mirna_Bovine_herpesvirus.fasta  mirna_Brachypodium_distachyon.fasta  mirna_Brassica_napus.fasta  mirna_Brugia_malayi.fasta  mirna_Bruguiera_gymnorhiza.fasta  mirna_Caenorhabditis_briggsae.fasta  mirna_Cerebratulus_lacteus.fasta  mirna_Chlamydomonas_reinhardtii.fasta  mirna_Chrysemys_picta.fasta  mirna_Ciona_intestinalis.fasta  mirna_Citrus_sinensis.fasta  mirna_Columba_livia.fasta  mirna_Cricetulus_griseus.fasta  mirna_Culex_quinquefasciatus.fasta  mirna_Cunninghamia_lanceolata.fasta  mirna_Daphnia_pulex.fasta  mirna_Digitalis_purpurea.fasta  mirna_Drosophila_mojavensis.fasta  mirna_Drosophila_pseudoobscura.fasta  mirna_Drosophila_simulans.fasta  mirna_Drosophila_willistoni.fasta  mirna_Drosophila_yakuba.fasta  mirna_Duck_enteritis.fasta  (+80 more)
(+114 files in other folders)
